--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
     <canvas id="gameCanvas" width="665" height="480">
-          This text is displayed if your browser does not support HTML5.
+          This text is displayed if your browser does not support HTMLdfkhsdflkjahsdflkjh5.
     </canvas>
 	<script src="level1.js"></script>
 	<script src="keyboard.js"></script>
